<resources>
    <string name="app_name">Udemy Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="greeting">Welcome!</string>
    <string name="name_request">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="nameExample">e.g. John</string>
    <string name="start">Start</string>
    <string name="flagQuestion">What country does this flag belong to?</string>
    <string name="progress_made">0/10</string>
    <string name="submit">SUBMIT</string>
    <string name="img">Quiz Image</string>
    <string name="result">Result</string>
    <string name="congrats">Hey, Congratulations!</string>
    <string name="username">Username</string>
    <string name="score">Your score is 9 out of 10</string>
    <string name="finish">Finish</string>
</resources>